// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mixin Props testing Default values 1`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Mixin Props testing props of BaseMixin 1`] = `
<Fragment>
  <screen-size-item
    className="my-classname"
    id="myId"
    key="myId"
    mainAttrs={
      Object {
        "style": Array [
          Object {
            "backgroundColor": "red",
            "color": "blue",
          },
        ],
      }
    }
    name="myName"
    nestingLevel="spa"
    noIndex={true}
    screenSize="l"
    style="padding:8px; borderRadius: 2px"
    tooltip="My Tooltip"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Mixin Props testing props of ElementaryMixin 1`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Mixin Props testing props of NestingLevelMixin 1`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Test UU5.bricks.ScreenSize.items own props props.ScreeSize - test 1`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Test UU5.bricks.ScreenSize.items own props props.ScreeSize - test 2`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Test UU5.bricks.ScreenSize.items own props props.ScreeSize - test 3`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Test UU5.bricks.ScreenSize.items own props props.ScreeSize - test 4`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`Test UU5.bricks.ScreenSize.items own props props.ScreeSize - test 5`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize="l"
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`UU5.Bricks.ScreenSize.Item checkGrammar=false 1`] = `
<Div
  checkGrammar={false}
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item checkGrammar=true 1`] = `
<Div
  checkGrammar={true}
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item checkHighlight=false 1`] = `
<Div
  checkHighlight={false}
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item checkHighlight=true 1`] = `
<Div
  checkHighlight={true}
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item checkSpaces=false 1`] = `
<Div
  checkSpaces={false}
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item checkSpaces=true 1`] = `
<Div
  checkSpaces={true}
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item className="my-classname" 1`] = `
<Div
  className="uu5-bricks-screen-size-item my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item className="test-classname" 1`] = `
<Div
  className="uu5-bricks-screen-size-item test-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item content="This is Content from ContentMixin" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item content=12345 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item controlled=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item controlled=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item default props 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item disabled=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item disabled=false 3`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item disabled=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item disabled=true 3`] = `
<Div
  className="uu5-bricks-screen-size-item"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item docKit examples UU5.Bricks.ScreenSize.Item should render without crash 1`] = `
<Fragment>
  <screen-size-item
    id="uuID4"
    key="uuID4"
    nestingLevel="spa"
    screenSize={
      Array [
        "m",
        "l",
        "xl",
      ]
    }
  >
    <Span
      content="Content for M-XL"
    />
  </screen-size-item>
</Fragment>
`;

exports[`UU5.Bricks.ScreenSize.Item dynamic=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item dynamic=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item fullTextSearchPriority=0 1`] = `
<Div
  className="uu5-bricks-screen-size-item uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item hidden=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item hidden=false 3`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item hidden=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item hidden=true 3`] = `
<Div
  className="uu5-bricks-screen-size-item"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item id="myId" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="myId-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item id="test-id" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="test-id-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item ignoreHTML=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item ignoreHTML=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item mainAttrs=undefined 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item name="myName" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="bigBox" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="box" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="box" 3`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="boxCollection" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="container" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="container"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="inline" 1`] = `
<Span
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="inline"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="inline" 3`] = `
<Span
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="inline"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="page" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="smallBox" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="smallBoxCollection" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item nestingLevel="spa" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
/>
`;

exports[`UU5.Bricks.ScreenSize.Item noIndex=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item noIndex=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item uu5-noindex uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item noPrint=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item noPrint=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item screenSize="l" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item screenSize="m" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item screenSize="s" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item screenSize="xl" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item screenSize="xs" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item selected=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item selected=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  selected={true}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.ScreenSize.Item style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.ScreenSize.Item style={"margin":8} 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.ScreenSize.Item textCorrector=false 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  textCorrector={false}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item textCorrector=true 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  textCorrector={true}
/>
`;

exports[`UU5.Bricks.ScreenSize.Item tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-bricks-screen-size-item"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
/>
`;
